pixel snapping improvements (see issue #307)